[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/jugadorsprite.png" type="Texture" id=1]
[ext_resource path="res://source/actor/Player.gd" type="Script" id=2]
[ext_resource path="res://audio/mymusic/ataque.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/mymusic/bulletplayer2.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/mymusic/bulletplayer4.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/mymusic/ataque2.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/mymusic/bulletplayer3.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/mymusic/ataque3.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 61.6587, 35.6445 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60.902, 35.4659 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2147483649
collision_mask = 14
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( -1, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.23091, 5.79441 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -53.698 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -47.3529, -49.7048 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 40.6787, -49.7048 )

[node name="Bulletcollide" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bulletcollide"]
position = Vector2( -2.4742, 4.28098 )
shape = SubResource( 2 )

[node name="bullet" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -11.674

[node name="bullet2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 8.49

[node name="bullet3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="damage2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="damage3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 14.857
[connection signal="area_entered" from="Bulletcollide" to="." method="_on_Bulletcollide_area_entered"]
